# HappStackTest

./: .gitignore  HUIS.cabal  HappStackTest.cabal  README  huis.conf
misc/: huis
ressources/css/: default.css  style.css
ressources/html/: index.html
ressources/js/: slider.js
src/: .gitignore  Main.hs  ServerMain.hs
src/HUIS/: Anniversary.hs  Birthday.hs  ConfigParser.hs  CsvOutput.hs  Database.hs  Dispatcher.hs  Personensuche.hs  Reminder.hs  Server.hs  SimpleQuery.hs  StaticResponses.hs  WhereQueryErmittlung.hs
