Name:           HUIS
Version:        0.1
Synopsis:		Haskell University Information System
Cabal-Version:  >= 1.2
build-type: 	Simple
data-files:     huis.conf, ressources/img/*.png, ressources/img/*.jpg, ressources/img/*.gif, ressources/css/*.css, ressources/js/*.js ressources/js/easySlider1.5.js

Executable HUISServer
  Build-Depends:  happstack-server >= 0.4,
                  happstack-util >= 0.4,
                  xhtml >= 3000.2,
                  base >= 3.0,
                  regex-compat >= 0.92,
                  MissingH >= 1.1,
                  containers >= 0.2,
                  parsec >= 2.1,
                  haskell98,
                  gitit >= 0.7,
                  HDBC-odbc >= 2.2.3.0,
                  HDBC >= 2.2.6,
                  unix >= 2.4.0,
                  mtl >= 1.1,
                  time >= 1.1.4,
                  convertible >= 1.0.9,
                  HDBC-postgresql >= 2.2.3.1
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  other-modules:  HUIS.Anniversary HUIS.Dispatcher HUIS.Database HUIS.StaticResponses HUIS.Server HUIS.ConfigParser HUIS.SimpleQuery Paths_HUIS HUIS.Reminder HUIS.Birthday HUIS.Personensuche HUIS.WhereQueryErmittlung
